--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -5,6 +5,12 @@ $forsa-button-label-font-size: 1.1rem;
 .content {
   fieldset {
     margin-bottom: $fieldset-padding;
+
+    &.download-buttons {
+      a {
+        margin-left: $global-margin;
+      }
+    }
   }
 
   label {
