--- a/app/views/admin/membership_applications/index.html.erb
+++ b/app/views/admin/membership_applications/index.html.erb
@@ -31,6 +31,8 @@
   </fieldset>
 <% end %>
 
+<%= paginate @membership_applications %>
+
 <table class="hover">
   <thead>
   <tr>
@@ -49,6 +51,8 @@
     </tr>
   <% end %>
 </table>
+
+<%= paginate @membership_applications %>
 
 <fieldset class="download-buttons">
   <%=
