Add a textarea-based Google Places lookup
Is:

- limited to types: ['geocode'] only (others will cause invalid
  HTMLInputElement with a textarea)
- incomplete with respect to the handling of the return key
- using an API key set in application.html.erb that should be in the
  environment

--- a/app/views/membership_applications/steps/contact-details.html.erb
+++ b/app/views/membership_applications/steps/contact-details.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :home_address %>
     <%= help_for :home_address %>
     <%= form_field_errors f, :home_address %>
-    <%= f.text_area :home_address, rows: 5 %>
+    <%= f.text_area :home_address, rows: 5, class: 'address-autocomplete' %>
 
     <%= f.submit 'Next' %>
   </fieldset>
