--- a/app/views/membership_applications/steps/declaration.erb
+++ b/app/views/membership_applications/steps/declaration.erb
@@ -25,9 +25,8 @@
       </p>
 
       <p><strong>
-        If you have any questions about this, please email us at
-        <%= link_to t('site_email'), "mailto:#{t('site_email')}" %> or
-        call us on <%= link_to '01 817 1500', 'tel:01 817 1500' %>
+        If you have any questions about this, please email us at <%= site_email %> or
+        call us on <%= site_tel %>
       </strong></p>
     </section>
 
