Add the address autocomplete to work_address
Also target only types: ['establishment'] in this case.

--- a/app/views/membership_applications/steps/your-work.erb
+++ b/app/views/membership_applications/steps/your-work.erb
@@ -18,7 +18,7 @@
     <%= f.label :work_address %>
     <%= form_field_errors f, :work_address %>
     <%= help_for :work_address %>
-    <%= f.text_area :work_address, rows: 5 %>
+    <%= f.text_area :work_address, rows: 5, class: 'address-autocomplete', data: { type: 'establishment' } %>
 
     <%= f.label :payroll_number %>
     <%= form_field_errors f, :payroll_number %>
