Don't style the Google PAC input on error
It's only a search box, not the target of validation.

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -60,7 +60,7 @@ input {
 }
 
 .field_with_errors {
-  input,
+  input:not(.pac-target-input),
   textarea,
   label.block-label {
     border-color: $alert-color;
