Put address controls in fieldsets
Bit hacky, but give them a bit more room on forms

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -6,6 +6,10 @@ $forsa-button-label-font-size: 1.1rem;
   fieldset {
     margin-bottom: $fieldset-padding;
 
+    &.fieldset-address {
+      margin-bottom: 2rem;
+    }
+
     &.download-buttons {
       a {
         margin-left: $global-margin;
