Squish addresses together a bit
and remove their help text

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -8,6 +8,14 @@ $forsa-button-label-font-size: 1.1rem;
 
     &.fieldset-address {
       margin-bottom: 2rem;
+
+      .pac-target-input {
+        margin-bottom: 0;
+      }
+
+      textarea {
+        margin-top: $global-margin;
+      }
     }
 
     &.download-buttons {
