First screen copy changes

--- a/app/views/membership_applications/new.html.erb
+++ b/app/views/membership_applications/new.html.erb
@@ -1,16 +1,18 @@
 <section class="callout primary">
-  <h1>Join Today</h1>
+  <h1>Join today</h1>
 
   <p>
     <strong>
-      We are Ireland’s newest and fastest-growing union with over 80,000 members.
+      Fórsa is the largest union in the public sector, with a strong and vibrant membership across the semi-state,
+      private and community/voluntary sectors.
     </strong>
   </p>
   <p>
-    Fórsa is the largest union in the public sector, with a strong and vibrant membership across the semi-state, private and community/voluntary sectors.
+    We are Ireland’s newest and fastest-growing union with over 80,000 members.
   </p>
   <p>
-    We win better terms and conditions for our members, provide expert representation, professional advice, workplace support and protection.
+    We win better terms and conditions for our members, provide expert representation, professional advice,
+    workplace support and protection. And you can access financial and other benefits too.
   </p>
   <p>
     Most members pay less than €5 a week, deducted directly from their salary.
