Add Twitter/FB metadata tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
     <%= favicon_link_tag 'favicon-16x16.png', sizes: '16x16', type: 'image/png'  %>
 
     <%= render 'shared/google_analytics' %>
+    <%= render 'shared/social_media_metadata' %>
   </head>
 
   <body>
