Update copy for your-subscription-rate.erb

--- a/app/views/membership_applications/steps/your-subscription-rate.erb
+++ b/app/views/membership_applications/steps/your-subscription-rate.erb
@@ -31,7 +31,7 @@
       <%= f.hidden_field :technical_grade %>
 
       <label>
-        Based on your the information provided, your estimated monthly payment will be
+        Based on the information provided, your estimated monthly payment will be
         €<span id="monthly-estimate-value">
           <%= @membership_application.applicant_saw_monthly_estimate %>
         </span>
@@ -44,12 +44,12 @@
         </p>
 
         <p>
-          Some branch subscriptions are calculated at a different rate or may have additional levies.
-          If your branch is one of these, we will notify you in advance of any payment being processed.
+          A small number of branch subscriptions are calculated at a different rate or may have additional levies.
         </p>
 
         <p>
-          Your employer will deduct the subscription directly from your pay and provide it to us on your behalf.
+          Your employer will deduct the appropriate subscription directly from your pay and provide it to us on your
+          behalf.
         </p>
       </div>
     </section>
