Copy changes to completed.html.erb

--- a/app/views/membership_applications/completed.html.erb
+++ b/app/views/membership_applications/completed.html.erb
@@ -31,14 +31,14 @@
   </div>
 <% end %>
 
-<h2 class="h4">Here’s what will happen next.</h2>
+<h2 class="h4">Here is what will happen next:</h2>
 
 <ul class="no-bullet">
-  <li><p><strong>Now:</strong> You’ll get an email from us confirming your membership details.</p></li>
-  <li><p><strong>This month:</strong> You’ll be assigned to a branch and will receive your membership card and pack.</p></li>
-  <li><p><strong>From now on:</strong> You’re protected at work and will benefit from collectively negotiated improvements to pay and conditions.</p></li>
+  <li><p><strong>Now:</strong> You will get an email from us confirming your details.</p></li>
+  <li><p><strong>This month:</strong> You will be assigned to a branch and will receive your membership card and pack.<sup>*</sup></p></li>
+  <li><p><strong>From then on:</strong> You are protected at work and benefit from the collective strength of being part of Fórsa and will also be able to access member benefits and offers.</p></li>
 </ul>
 
-<p class="h4"><strong>You’re one of over 80,000 Fórsa members. Thanks for joining us.</strong></p>
+<p class="h4"><strong>You are one of over 80,000 Fórsa members. Thank you for joining us.</strong></p>
 
-<p class="side-note">(*Subject to final processing and authorisation by your branch and/or the National Executive Committee)<p>
+<p class="side-note"><sup>*</sup>Subject to final processing and authorisation by your branch and/or the National Executive Committee<p>
