Make email confirmation explicit
It's still pre-filled; don't give people a typing test. But
do use language like "make sure" to get people to check things
over.

--- a/app/views/membership_applications/steps/contact-details.html.erb
+++ b/app/views/membership_applications/steps/contact-details.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for @membership_application, url: wizard_path do |f| %>
   <fieldset>
-    <%= f.label :email %>
-    <%= help_for :email %>
+    <%= f.label :confirm_email %>
+    <%= help_for :confirm_email %>
     <%= form_field_errors f, :email %>
     <%= f.text_field :email %>
 
