--- a/app/views/membership_applications/completed.html.erb
+++ b/app/views/membership_applications/completed.html.erb
@@ -35,7 +35,7 @@
 
 <ul class="no-bullet">
   <li><p><strong>Now:</strong> You will get an email from us confirming your details.</p></li>
-  <li><p><strong>This month:</strong> You will be assigned to a branch and will receive your membership card and pack.<sup>*</sup></p></li>
+  <li><p><strong>In the next month:</strong> You will be assigned to a branch and will receive your membership card and pack.<sup>*</sup></p></li>
   <li><p><strong>From then on:</strong> You are protected at work and benefit from the collective strength of being part of Fórsa and will also be able to access member benefits and offers.</p></li>
 </ul>
 
